--- a/feature/templates/feature.fraedom.less
+++ b/feature/templates/feature.fraedom.less
@@ -11,18 +11,13 @@
  */
 body {
   content {
-  /**
-   * Insert all other parents here.
-   */
   <%= yeoman.choices.feature %> {
-      h1 {
-        box-shadow: 0px 0px 2px #000000;
-      }
-      .font-roboto {
+      .navbar {
         font-family: 'Roboto';
         font-style: normal;
         font-weight: 100;
-        font-size: x-larger;
+        font-size: xx-large;
+        text-align: center;
       }
     }
   }
