--- a/app/templates/client/app/home/home.fraedom.less
+++ b/app/templates/client/app/home/home.fraedom.less
@@ -12,14 +12,12 @@
 body {
   content {
     home {
-      h1 {
-        box-shadow: 0px 0px 2px #000000;
-      }
-      .font-roboto {
+      .navbar {
         font-family: 'Roboto';
         font-style: normal;
         font-weight: 100;
-        font-size: x-larger;
+        font-size: xx-large;
+        text-align: center;
       }
     }
   }
