--- a/app/templates/client/index.html
+++ b/app/templates/client/index.html
@@ -39,7 +39,7 @@
 </head>
 <body ng-app="app">
 <!-- Add your site or application content here -->
-<content class="container-fluid" ui-view></content>
+<content ui-view></content>
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
 <script>
   (function (i, s, o, g, r, a, m) {
