--- a/feature/templates/feature.html
+++ b/feature/templates/feature.html
@@ -1,5 +1,5 @@
 <!-- Wrap every feature in its own element. That gives us proper css encapsulation. -->
-<<<%= yeoman.choices.feature %>>>
+<<%= yeoman.choices.feature %>>
   <!-- A bootstrap navbar. -->
   <nav class="navbar navbar-inverse navbar-default">
     <div class="container-fluid">
@@ -23,7 +23,7 @@
     <div class="row" style="text-align: center;">
       <h3 class="col-xs-5 vtop">How are you?</h3><!--
       --><img class="col-xs-2 vtop" src="assets/images/yeoman.png" alt="I'm Yeoman"><!--
-      --><h3 class="col-xs-5 vtop">{{<<%= yeoman.choices.feature %>>Controller.anything}}</h3>
+      --><h3 class="col-xs-5 vtop">{{<%= yeoman.choices.feature %>Controller.anything}}</h3>
     </div>
     <div class="row" style="text-align: center;">
       <div class="col-xs-12">
@@ -37,9 +37,9 @@
     </div>
     <div class="row">
       <!-- This will only be visible if the API returns the value. -->
-      <span class="col-xs-12">{{<<%= yeoman.choices.feature %>>Controller.stuff.something}}</span>
+      <span class="col-xs-12">{{<%= yeoman.choices.feature %>Controller.stuff.something}}</span>
     </div>
   </div>
   <!-- Show nested features here. -->
   <div ui-view></div>
-</<<%= yeoman.choices.feature %>>>
+</<%= yeoman.choices.feature %>>
